fix title by just hiding it on mobile

--- a/MyRPG/src/app/Login/Login.component.css
+++ b/MyRPG/src/app/Login/Login.component.css
@@ -90,6 +90,7 @@
 @media (max-width : 767px) {
   .LogoContainer {
     margin-bottom : 125%;
+    visibility: hidden;
   }
 }
 
